# docker-compose-ui

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  docker-compose-otel.yml
src/: app.rs  event.rs  handler.rs  lib.rs  main.rs  text_wrap.rs  tui.rs  ui.rs  utils.rs
src/ui/: container_details.rs  help.rs  legend.rs  main_screen.rs  mod.rs  popup.rs  resize_screen.rs
