[package]
name = "dcr"
version = "0.4.1"
repository = "https://github.com/Ptrskay3/docker-compose-ui"
authors = ["peter leeh <leeh123peter@gmail.com>"]
license = "MIT"
edition = "2021"

[dependencies]
crossterm = { version = "0.28.1", features = ["event-stream"] }
docker-compose-types = { version = "0.14.0" } 
futures = "0.3.30"
ratatui = "0.28.1"
serde = "1.0.209"
serde_yaml = "0.9.33"
tokio = { version = "1.40.0", features = ["full"] }
bollard = "*"
bitflags = "2.6.0"
derive_setters = "0.1.6"
dotenvy = "0.15.7"
textwrap = "0.16.1"
indexmap = "2.4.0"
ratatui-macros = "0.5.0"
itertools = "0.13.0"
unicode-width = "0.1.13"
anyhow = "1.0.86"
clap = { version = "4.5.16", features = ["derive"] }
jiff = "0.1.11"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.22.0"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu"]
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Whether to install an updater program
install-updater = true
